--- a/src/configs/config.yaml
+++ b/src/configs/config.yaml
@@ -2,10 +2,10 @@ data:
   saved_sessions_folder: saved_sessions
 game:
   bot_diameter: 0.1
-  bullet_damage: 10
+  bullet_damage: 8
   independent_models: true
-  initial_health: 42
-  prompt_augmentation: false
+  initial_health: 33
+  prompt_augmentation: true
   shield_initial_state: true
   shield_size: 35
   step_length: 0.02
