--- a/src/configs/config.yaml
+++ b/src/configs/config.yaml
@@ -7,19 +7,20 @@ game:
   bullet_step_length: 0.01
   independent_models: true
   initial_health: 30
-  prompt_augmentation: false
+  prompt_augmentation: true
   shield_initial_state: true
-  shield_size: 64
+  shield_size: 40
   step_length: 0.02
   total_rounds: 1
-  turns_per_round: 8
+  turns_per_round: 4
 llm:
-  augmentation_header_dependent: src/assets/prompts/shared_1.txt
   augmentation_header_independent: src/assets/prompts/augmentation_header_independent_1.txt
-  debug_requests: false
+  augmentation_header_shared: src/assets/prompts/shared_1.txt
+  debug_requests: true
   model: llama3.2:latest
   path: /api/chat
   port: 11434
+  num_ctx: 32768
   url: http://localhost
 ui:
   ' primary_color': '#ffffff'
